# FractalToy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: GameInput.h  GameTime.h  Scene.h  SceneManager.h  TextRenderer.h  camera.h  fpsCamera.h  geometry.h  quad.h
resource/: infiniteRayMarchShader.frag  infiniteRayMarchShader.vert  rayMarchShader.frag  textShader.frag
src/: GameInput.cpp  GameTime.cpp  Scene.cpp  SceneManager.cpp  TextRenderer.cpp  camera.cpp  fpsCamera.cpp  quad.cpp
